--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
             <artifactId>log4j-api</artifactId>
             <version>2.20.0</version>
         </dependency>
+<dependency>
+    <groupId>javax.annotation</groupId>
+    <artifactId>javax.annotation-api</artifactId>
+    <version>1.3.2</version>
+</dependency>
+
     </dependencies>
 
     <repositories>
